# LI-VAE

./: .gitignore  RAYTUNE_FIXES.md  RAYTUNE_STATUS.md  RAYTUNE_SUMMARY.md  RAYTUNE_USAGE.md  README.md  flake.nix  pyproject.toml  test_dataset_indexing.py  test_paired_dataset.py  verify_raytune.py
.github/: copilot-instructions.md
notebooks/: dataset.ipynb  explore_data_structure.ipynb  filtering_peak_detection.ipynb
scripts/: analyze_raytune_results.py  compare_training_methods.py  compare_vae_rvae.py  jank.sh  plot_tsne_by_image.py  pretrain_stn.py  raytune_quickstart.sh  test_raytune.sh  test_raytune_deps.py  train_rvae.py  train_rvae_raytune.py  train_rvae_with_best.py  train_vae.py  verify_rotational_invariance.py  visualizations.py
src/livae/: __init__.py  data.py  filter.py  loss.py  metrics.py  model.py  train.py  utils.py
tests/: test_data.py  test_filter.py  test_train.py  test_utils.py
