[project]
name = "LI-VAE"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
