[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livae"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "atomai>=0.8.1",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pywavelets>=1.9.0",
    "ray[tune]>=2.52.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "tensorboard>=2.16.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
